--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-#Flask==3.1.2
-Flask==2.0.3
+Flask==3.1.2
+#Flask==2.0.3
 
 gunicorn==23.0.0    # WSGI server for production
 
@@ -10,5 +10,5 @@ requests==2.32.4
 pytest==9.0.1
 pytest-flask==1.3.0     # plugin
 
-# Werkzeug==3.1.3     # Security scanning will check these dependencies
-Werkzeug==2.0.3
+Werkzeug==3.1.3     # Security scanning will check these dependencies
+#Werkzeug==2.0.3
